gpodderpreferences.ui: Add margins around dialog ButtonBox

--- a/share/gpodder/ui/gtk/gpodderpreferences.ui
+++ b/share/gpodder/ui/gtk/gpodderpreferences.ui
@@ -39,6 +39,10 @@
           <object class="GtkButtonBox" id="action_area">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
+            <property name="margin-start">5</property>
+            <property name="margin-end">5</property>
+            <property name="margin-top">5</property>
+            <property name="margin-bottom">5</property>
             <property name="layout-style">end</property>
             <child>
               <object class="GtkButton" id="button_advanced">
