--- a/share/gpodder/ui/gtk/menus.ui
+++ b/share/gpodder/ui/gtk/menus.ui
@@ -117,6 +117,10 @@
           <attribute name="label" translatable="yes">Download</attribute>
         </item>
         <item>
+          <attribute name="action">win.pause</attribute>
+          <attribute name="label" translatable="yes">Pause</attribute>
+        </item>
+        <item>
           <attribute name="action">win.cancel</attribute>
           <attribute name="label" translatable="yes">Cancel</attribute>
         </item>
